--- a/css/style.css
+++ b/css/style.css
@@ -990,7 +990,8 @@ h3.my-profession
     .about .about-content .experience,
     .about .about-content .edication,
     .about .about-content .skills,
-    .about .about-content .personal-info
+    .about .about-content .personal-info,
+    .about .about-content .personal-info .info-item
     {
         flex: 0 0 100%;
         max-width: 100%;
