--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -622,3 +622,11 @@ ul {
     cursor: pointer;
     border-radius: 5px;
 }
+
+@media screen and (max-width: 600px) {
+
+    .modal-content {
+        margin: 20% auto;;
+        width: 300px !important;
+    }
+}
