--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
 
 :root {
     --bg-black-900: #f2f2fc;
@@ -31,7 +31,7 @@ body.dark {
 body {
     line-height: 1.5;
     font-size: 16px;
-    font-family: "Nunito", sans-serif;
+    font-family: 'SF Pro Display', sans-serif;
     font-optical-sizing: auto;
 }
 
