--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -143,7 +143,7 @@ ul {
 }
 
 .container {
-    max-width: 1100px;
+    /* max-width: 1100px; */
     width: 100%;
     margin: auto;
 
@@ -168,9 +168,10 @@ ul {
 /** home **/
 
 .home {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: flex;
     color: var(--text-black-900);
+    background-color: #fff;
 }
 
 .home .home-info {
