--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,8 +22,53 @@
 body {
     line-height: 1.5;
     font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
     font-optical-sizing: auto;
+
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 220px !important;
+    padding-top: 100px !important;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        padding: 0 40px !important;
+        padding-top: 80px !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding: 0 20px !important;
+        padding-top: 50px !important;
+
+    }
+}
+
+.landing{
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 300px !important;
+    padding-top: 30px !important;
+}
+
+@media (max-width: 1024px) {
+    .landing {
+        padding: 0 40px !important;
+        padding-top: 80px !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .landing {
+        padding: 0 20px !important;
+        padding-top: 50px !important;
+
+    }
 }
 
 * {
@@ -55,14 +100,10 @@ body {
 .card-image {
     position: absolute;
     left: -20px;
-    /* Move image left */
     top: 30px;
-    /* Move image down */
     width: 120%;
-    /* Compensate for left movement */
     height: auto;
     object-fit: cover;
-    /* Prevent image distortion */
 }
 
 :root {
@@ -98,63 +139,9 @@ ul {
 
 }
 
-
-.section {
-    background: var(--bg-white);
-    min-height: 100vh;
-    display: block;
-    padding: 0 300px;
-    opacity: 1;
-    position: center;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.section.back-section {
-    z-index: 1;
-}
-
-.section.active {
-    z-index: 2;
-    opacity: 1;
-    animation: slideSection 1s ease;
-}
-
-@keyframes slideSection {
-    0% {
-        transform: translateX(100%);
-    }
-
-    100% {
-        transform: translateX(0%);
-    }
-}
-
 .hidden {
     display: none !important;
 }
-
-.padd-15 {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.container {
-    /* max-width: 1100px; */
-    width: 100%;
-    margin: auto;
-
-}
-
-.section .container {
-    padding-top: 60px;
-    padding-bottom: 70px;
-}
-
 
 .hover-text {
     transition: color 0.3s ease;
@@ -165,142 +152,11 @@ ul {
 }
 
 
-
-/** home **/
-
-.home {
-    /* min-height: 100vh; */
-    display: flex;
-    color: var(--text-black-900);
-    background-color: #fff;
-}
-
-.home .home-info {
-    flex: 0 0 60%;
-    max-width: 50%;
-}
-
-
-.typing {
-    color: var(--skin-color);
-}
-
-.home-info p {
-    margin-bottom: 30px;
-    font-size: 20px;
-    color: var(--text-black-700);
-}
-
-.home .home-img {
-    flex: 0 0 50%;
-    max-width: 50%;
-    text-align: end;
-    position: relative;
-
-}
-
-.home .home-img img {
-    margin: auto;
-    border-radius: 16px;
-    height: 450px;
-}
-
-.home__icon_cont {
-    display: flex;
-    flex-direction: row;
-
-}
-
-.home__icon_cont i {
-    color: var(--skin-color);
-    font-size: 25px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    margin-right: 18px;
-}
-
-@media (max-width:1199px) {
-    .section .container {
-        padding-top: 70px;
-    }
-
-    .section {
-        left: 0;
-    }
-
-    .section.open {
-        left: 270px;
-    }
-
-    .about .about-content .personal-info .info-item p span {
-        display: block;
-        margin-left: 0;
-    }
-}
-
-@media (max-width:991px) {
-
-    .contact .contact-info-item,
-    .portfolio .portfolio-item,
-    .service .service-item {
-        flex: 0 0 50%;
-        max-width: 50%;
-
-    }
-
-    .home .home-info {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-
-    .home .home-img {
-        /* display: none; */
-        margin: auto;
-        margin-top: 50px;
-        max-width: 100%;
-        margin-bottom: 50px;
-    }
-
-    .home .home-img img {
-        margin: auto;
-        border-radius: 16px;
-        height: 370px;
-    }
-
-    .home-img img {
-        object-fit: cover;
-        /* width: 100% */
-    }
-}
-
-@media (max-width:767px) {
-
-    .section {
-        background: var(--bg-white);
-        min-height: 100vh;
-        display: block;
-        padding: 0 20px;
-        opacity: 1;
-        position: fixed;
-    }
-
-    .home .home-img img {
-        margin: auto;
-        border-radius: 16px;
-        height: 370px;
-    }
-
-
-
-}
-
 .highlight-span {
     color: #e74c3c;
     /* Example highlight color */
     font-weight: bold;
 }
-
-
 
 .scroll-text {
     font-style: italic;
@@ -368,7 +224,7 @@ ul {
 }
 
 .section-padding {
-    padding-bottom: 120px;
+    padding-bottom: 100px;
     padding-top: 100px;
 
 }
@@ -764,7 +620,7 @@ ul {
     background-image: linear-gradient(to right, #434343 0%, black 100%);
     color: white;
     padding: 4rem 2rem;
-    border-radius: 12px 12px 0px 0px;
+    border-radius: 16px 16px 0px 0px;
 }
 
 .footer-content {
@@ -863,7 +719,7 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     position: relative;
     cursor: pointer;
@@ -872,7 +728,7 @@ ul {
 
 .tech-item:hover {
     transform: translateY(-10px);
-    box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
 }
 
 .tech-item img {
@@ -887,7 +743,7 @@ ul {
     bottom: -25px;
     left: 50%;
     transform: translateX(-50%);
-    background: rgba(0,0,0,0.9);
+    background: rgba(0, 0, 0, 0.9);
     color: white;
     padding: 8px 20px;
     border-radius: 25px;
@@ -906,5 +762,3 @@ ul {
 .tech-item:hover img {
     transform: scale(0.9);
 }
-
-
