--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,16 +49,18 @@ body {
     }
 }
 
-.landing{
+.landing {
     max-width: 1440px;
     margin: 0 auto;
     padding: 0 300px !important;
+    text-align: center !important;
 }
 
 @media (max-width: 1024px) {
     .landing {
         padding: 0 40px !important;
         padding-top: 80px !important;
+        text-align: center !important;
     }
 }
 
@@ -66,6 +68,7 @@ body {
     .landing {
         padding: 0 20px !important;
         padding-top: 50px !important;
+        text-align: start !important;
 
     }
 }
@@ -230,6 +233,25 @@ ul {
 
 @media (max-width:767px) {
     .section-padding {
+        padding-bottom: 50px;
+        padding-top: 0px;
+    }
+
+    br.mobile-hide {
+        display: none;
+    }
+
+
+}
+
+.section-padding-2 {
+    padding-bottom: 100px;
+    padding-top: 0px !important;
+
+}
+
+@media (max-width:767px) {
+    .section-padding-2 {
         padding-bottom: 50px;
         padding-top: 0px;
     }
@@ -711,8 +733,8 @@ ul {
 }
 
 .tech-item {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background: white;
     border-radius: 15px;
     display: flex;
@@ -760,4 +782,43 @@ ul {
 
 .tech-item:hover img {
     transform: scale(0.9);
+}
+
+.scroll-effect {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(50px);
+    transition: all 0.6s ease-out;
+}
+
+.scroll-effect.active {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+}
+
+.text-md-center {
+    text-align: center !important
+}
+
+.text-start {
+    text-align: left !important
+}
+
+.pc-view {
+    display: block;
+}
+
+.mobile-view {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .pc-view {
+        display: none;
+    }
+
+    .mobile-view {
+        display: block;
+    }
 }
