--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,52 +225,52 @@ ul {
     border-radius: 50%;
 }
 
+
 .section-padding {
-    padding-bottom: 100px;
-    padding-top: 100px;
+    padding-bottom: 100px !important;
+    padding-top: 100px !important;
 
 }
 
 @media (max-width:767px) {
     .section-padding {
-        padding-bottom: 50px;
-        padding-top: 0px;
-    }
-
-    br.mobile-hide {
-        display: none;
+        padding-bottom: 100px !important;
+        padding-top: 100px !important; 
     }
 
 
 }
 
 .section-padding-2 {
-    padding-bottom: 100px;
-    padding-top: 0px !important;
+    padding-bottom: 35px !important;
+    padding-top: 100px !important;
 
 }
 
 @media (max-width:767px) {
     .section-padding-2 {
-        padding-bottom: 50px;
-        padding-top: 0px;
+        padding-bottom:15px !important;
+        padding-top: 50px !important;
     }
 
 }
 
 .section-padding-3 {
-    padding-bottom: 120px !important;
-    padding-top: 20px !important;
+    padding-bottom: 100px !important;
+    padding-top: 0px !important;
 
 }
 
 @media (max-width:767px) {
     .section-padding-3 {
-        padding-bottom: 60px !important;
-        padding-top: 10px !important;
+        padding-bottom: 15px !important;
+        padding-top: 0px !important;
     }
 
+
 }
+
+
 
 .hover-elevate-up {
     transition: transform .3s ease
@@ -800,9 +800,9 @@ ul {
 
 .scroll-effect {
     opacity: 0;
-    filter: blur(4px);
+    filter: blur(5px);
     transform: translateY(50px);
-    transition: all 0.7s ease-out;
+    transition: all 0.6s ease-out;
 }
 
 .scroll-effect.active {
@@ -954,7 +954,7 @@ ul {
 
 :root {
     --primary: #292929;
-    --secondary: #7F7F7F;
+    --secondary: #009FFD;
     --accent: #FF3C83;
     --light: #F4F4F8;
 }
@@ -1083,3 +1083,4 @@ ul {
     gap: 2rem;
     padding: 2rem 0;
 }
+
